# tc-tui

./: Cargo.toml  README.md  config.toml
src/: config.rs  currency.rs  github.rs  globe.rs  main.rs  system.rs  weather.rs
