[package]
name = "tc-tui"
version = "0.1.0"
edition = "2021"
description = "Tangential Cold TUI"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
chrono-tz = "0.9"
hostname = "0.4"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
toml = "0.8"
dirs = "5"
