[package]
name = "tc-tui"
version = "0.1.0"
edition = "2021"
description = "Tangential Cold TUI"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
chrono = "0.4"
chrono-tz = "0.10"
hostname = "0.4"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
toml = "1"
dirs = "6"
if-addrs = "0.15"
